@@ -1,0 +1,42 @@
+/* XPM */
+static char *link[] = {
+/* width height num_colors chars_per_pixel */
+"    32    32        3            1",
+/* colors */
+". c #000000",
+"b c #FFFFFF",
+"# c none",
+/* pixels */
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"################################",
+"............####################",
+".bbbbbbbbbb.####################",
+".bbbbbbbbbb.####################",
+".bb.bb.bbbb.####################",
+".bb..b..bbb.####################",
+".bbb.....bb.####################",
+".bbbbb..bbb.####################",
+".bbbbb.bbbb.####################",
+".bbbbbbbbbb.####################",
+"............####################"
+};
