@@ -1,3 +1,7 @@
+Sat Mar 21 09:21:34 1998  Martin Jones  <mjones@kde.org>
+
+	* Added link overlay to icons.
+
 Fri Mar 13 21:42:15 1998  Stephan Kulow  <coolo@kde.org>
 
 	* kfmpaths.cpp: don't write the config paths back. I wrote this
